content/uk/examples/service/networking/vap-servicecidr-deny.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: "servicecidrs.deny"
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
    - apiGroups:   ["networking.k8s.io"]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["servicecidrs"]
  validations:
  # Відхилити зміни до всіх ServiceCIDR, крім того, що встановлено як стандартний
  - expression: "object.metadata.name == 'kubernetes'"
    message: "ви можете створювати або оновлювати лише стандартний ServiceCIDR"
  # Відхилити зміни від усіх користувачів, крім kube-apiserver
  - expression: "request.userInfo.username == 'system:apiserver' && 'system:masters' in request.userInfo.groups"
    message: "ви не можете створювати або оновлювати обʼєкти ServiceCIDR"
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: "servicecidrs-deny-binding"
spec:
  policyName: "servicecidrs.deny"
  validationActions: [Deny,Audit]
